modified:   dictionary.latex.liquid

--- a/dictionary/dictionary.latex.liquid
+++ b/dictionary/dictionary.latex.liquid
@@ -69,6 +69,6 @@
 {% endfor %}
 
 \onecolumn
-\section*{Senti tosmí {{ keys | size }} verdóm!}
+\section*{Senti soi {{ keys | size }} verdóm!}
 
 \end{document}
