--- a/grammar/verbs/TEMPLATE-ACTIVE.latex.liquid
+++ b/grammar/verbs/TEMPLATE-ACTIVE.latex.liquid
@@ -6,43 +6,43 @@
 	\toprule
 	~ & \multicolumn{3}{c}{Participle} & \multicolumn{3}{c}{Infinitive} \\\\
 	\midrule
-	Present
+	\Prs
 	& \multicolumn{3}{c}{ \lan{ {{ active.participle.present }} }}
 	& \multicolumn{3}{c}{ \lan{ {{ active.infinitive.present }} }} \\\\
-	Perfect
+	\Prf
 	& \multicolumn{3}{c}{ \lan{ {{ active.participle.perfect }} }}
 	& \multicolumn{3}{c}{ \lan{ {{ active.infinitive.perfect }} }} \\\\
 	\midrule
 	~ & \lan{edo} & \lan{tu} & \lan{eno}
 	& \lan{vi} & \lan{ju} & \lan{enoi} \\\\
 	\midrule
-	Present
+	\Prs
 	{%- for item in active.indicative.present -%}
 		& \lan{ {{ item }} }
 	{%- endfor -%} \\\\
-	Imperfect
+	\Impf
 	{%- for item in active.indicative.imperfect -%}
 		& \lan{ {{ item }} }
 	{%- endfor -%} \\\\
-	Perfect
+	\Prf
 	{%- for item in active.indicative.perfect -%}
 		& \lan{ {{ item }} }
 	{%- endfor -%} \\\\
 	\midrule
-	Present
+	\Prs
 	{%- for item in active.subjunctive.present -%}
 		& \lan{ {{ item }} }
 	{%- endfor -%} \\\\
-	Perfect
+	\Prf
 	{%- for item in active.subjunctive.perfect -%}
 		& \lan{ {{ item }} }
 	{%- endfor -%} \\\\
 	\midrule
-	Present
+	\Prs
 	{%- for item in active.imperative.present -%}
 		& - & \lan{ {{ item }} } & -
 	{%- endfor -%} \\\\
-	Perfect
+	\Prf
 	{%- for item in active.imperative.perfect -%}
 		& - & \lan{ {{ item }} } & -
 	{%- endfor -%} \\\\
