modified:   dictionary/dictionary.latex modified:   dictionary/dictionary.pdf modified:   dictionary/dictionary.yaml modified:   grammar/compiled/bloti.latex modified:   grammar/compiled/doti.latex modified:   grammar/compiled/esti-be.latex modified:   grammar/compiled/esti-eat.latex modified:   grammar/compiled/iti.latex modified:   grammar/compiled/voide.latex modified:   grammar/compiled/vopeti.latex modified:   grammar/grammar.latex modified:   grammar/grammar.pdf modified:   grammar/verbs/TEMPLATE-ACTIVE.latex.liquid modified:   grammar/verbs/TEMPLATE-FULL.latex.liquid new file:   grammar/verbs/bideti.yaml

--- a/grammar/verbs/TEMPLATE-FULL.latex.liquid
+++ b/grammar/verbs/TEMPLATE-FULL.latex.liquid
@@ -1,50 +1,50 @@
 \begin{center}
 \footnotesize
-\begin{tabular}{l|llllll}
+\begin{tabularx}{\textwidth}{l|XXXXXX}
 	\toprule
 	\multicolumn{7}{c}{ACTIVE} \\\\
 	\toprule
 	~ & \multicolumn{3}{c}{Participle} & \multicolumn{3}{c}{Infinitive} \\\\
 	\midrule
 	\Prs
-	& \multicolumn{3}{c}{ \lan{ {{ active.participle.present }} }}
-	& \multicolumn{3}{c}{ \lan{ {{ active.infinitive.present }} }} \\\\
+	& \multicolumn{3}{c}{ \mlan{ {{ active.participle.present }} }}
+	& \multicolumn{3}{c}{ \mlan{ {{ active.infinitive.present }} }} \\\\
 	\Prf
-	& \multicolumn{3}{c}{ \lan{ {{ active.participle.perfect }} }}
-	& \multicolumn{3}{c}{ \lan{ {{ active.infinitive.perfect }} }} \\\\
+	& \multicolumn{3}{c}{ \mlan{ {{ active.participle.perfect }} }}
+	& \multicolumn{3}{c}{ \mlan{ {{ active.infinitive.perfect }} }} \\\\
 	\midrule
-	~ & \lan{edo} & \lan{tu} & \lan{eno}
-	& \lan{vi} & \lan{ju} & \lan{enoi} \\\\
+	~ & \mlan{edo} & \mlan{tu} & \mlan{eno}
+	& \mlan{vi} & \mlan{ju} & \mlan{enoi} \\\\
 	\midrule
 	\Prs
 	{%- for item in active.indicative.present -%}
-		& \lan{ {{ item }} }
+		& \mlan{ {{ item }} }
 	{%- endfor -%} \\\\
 	\Impf
 	{%- for item in active.indicative.imperfect -%}
-		& \lan{ {{ item }} }
+		& \mlan{ {{ item }} }
 	{%- endfor -%} \\\\
 	\Prf
 	{%- for item in active.indicative.perfect -%}
-		& \lan{ {{ item }} }
+		& \mlan{ {{ item }} }
 	{%- endfor -%} \\\\
 	\midrule
 	\Prs
 	{%- for item in active.subjunctive.present -%}
-		& \lan{ {{ item }} }
+		& \mlan{ {{ item }} }
 	{%- endfor -%} \\\\
 	\Prf
 	{%- for item in active.subjunctive.perfect -%}
-		& \lan{ {{ item }} }
+		& \mlan{ {{ item }} }
 	{%- endfor -%} \\\\
 	\midrule
 	\Prs
 	{%- for item in active.imperative.present -%}
-		& - & \lan{ {{ item }} } & -
+		& - & \mlan{ {{ item }} } & -
 	{%- endfor -%} \\\\
 	\Prf
 	{%- for item in active.imperative.perfect -%}
-		& - & \lan{ {{ item }} } & -
+		& - & \mlan{ {{ item }} } & -
 	{%- endfor -%} \\\\
 
 	\toprule
@@ -53,45 +53,45 @@
 	~ & \multicolumn{3}{c}{Participle} & \multicolumn{3}{c}{Infinitive} \\\\
 	\midrule
 	\Prs
-	& \multicolumn{3}{c}{ \lan{ {{ mediopassive.participle.present }} }}
-	& \multicolumn{3}{c}{ \lan{ {{ mediopassive.infinitive.present }} }} \\\\
+	& \multicolumn{3}{c}{ \mlan{ {{ mediopassive.participle.present }} }}
+	& \multicolumn{3}{c}{ \mlan{ {{ mediopassive.infinitive.present }} }} \\\\
 	\Prf
-	& \multicolumn{3}{c}{ \lan{ {{ mediopassive.participle.perfect }} }}
-	& \multicolumn{3}{c}{ \lan{ {{ mediopassive.infinitive.perfect }} }} \\\\
+	& \multicolumn{3}{c}{ \mlan{ {{ mediopassive.participle.perfect }} }}
+	& \multicolumn{3}{c}{ \mlan{ {{ mediopassive.infinitive.perfect }} }} \\\\
 	\midrule
-	~ & \lan{edo} & \lan{tu} & \lan{eno}
-	& \lan{vi} & \lan{ju} & \lan{enoi} \\\\
+	~ & \mlan{edo} & \mlan{tu} & \mlan{eno}
+	& \mlan{vi} & \mlan{ju} & \mlan{enoi} \\\\
 	\midrule
 	\Prs
 	{%- for item in mediopassive.indicative.present -%}
-		& \lan{ {{ item }} }
+		& \mlan{ {{ item }} }
 	{%- endfor -%} \\\\
 	\Impf
 	{%- for item in mediopassive.indicative.imperfect -%}
-		& \lan{ {{ item }} }
+		& \mlan{ {{ item }} }
 	{%- endfor -%} \\\\
 	\Prf
 	{%- for item in mediopassive.indicative.perfect -%}
-		& \lan{ {{ item }} }
+		& \mlan{ {{ item }} }
 	{%- endfor -%} \\\\
 	\midrule
 	\Prs
 	{%- for item in mediopassive.subjunctive.present -%}
-		& \lan{ {{ item }} }
+		& \mlan{ {{ item }} }
 	{%- endfor -%} \\\\
 	\Prf
 	{%- for item in mediopassive.subjunctive.perfect -%}
-		& \lan{ {{ item }} }
+		& \mlan{ {{ item }} }
 	{%- endfor -%} \\\\
 	\midrule
 	\Prs
 	{%- for item in mediopassive.imperative.present -%}
-		& - & \lan{ {{ item }} } & -
+		& - & \mlan{ {{ item }} } & -
 	{%- endfor -%} \\\\
 	\Prf
 	{%- for item in mediopassive.imperative.perfect -%}
-		& - & \lan{ {{ item }} } & -
+		& - & \mlan{ {{ item }} } & -
 	{%- endfor -%} \\\\
 	\bottomrule
-\end{tabular}
+\end{tabularx}
 \end{center}
