modified:   dictionary/dictionary.latex modified:   dictionary/dictionary.latex.liquid modified:   dictionary/dictionary.pdf modified:   dictionary/dictionary.yaml

--- a/dictionary/dictionary.latex.liquid
+++ b/dictionary/dictionary.latex.liquid
@@ -1,12 +1,12 @@
 \documentclass[twocolumn,a5paper]{article}
 \title{Dictionariom Danetiskas Danvas}
 \author{Saverios Castro}
-\date{25 januariosjo 2021}
+\date{29 martiosjo 2021}
 
 
 
 \usepackage{microtype} % Improves spacing
-\usepackage[top=4em,bottom=5em,left=3em,right=3em,columnsep=24pt]{geometry} % Document margins and spacings
+%\usepackage[top=4em,bottom=5em,left=3em,right=3em,columnsep=24pt]{geometry} % Document margins and spacings
 
 \usepackage{ebgaramond}
 
@@ -18,7 +18,7 @@
 %\setmainfont{DoulosSIL}
 %\usepackage{tgpagella}
 %\usepackage{crimson}
-\setmainfont{Century Gothic}
+%\setmainfont{Century Gothic}
 
 \usepackage{parskip}
 
