modified:   content.latex modified:   content.liquid modified:   dictionary.latex modified:   dictionary.pdf modified:   parse.py modified:   words.yaml

--- a/dictionary/content.liquid
+++ b/dictionary/content.liquid
@@ -10,8 +10,12 @@
 
 	{% raw %} {% endraw %}
 
-	{%- if entry.ety != '' -%}
+	{%- if entry.ety != '' and entry.note == '' -%}
 		{\footnotesize ({{- entry.ety -}}).}
+	{%- elsif entry.ety != '' and entry.note != '' -%}
+		{\footnotesize ({{- entry.ety -}}. $\blacklozenge$~{{- entry.note -}}).}
+	{%- elsif entry.ety == '' and entry.note != '' -%}
+		{\footnotesize ($\blacklozenge$~{{- entry.note -}}).}
 	{%- endif -%}
 
 	{%- assign L = entry.content | size -%}
