modified:   grammar/Makefile modified:   grammar/grammar.latex modified:   grammar/grammar.pdf modified:   grammar/template.latex.liquid deleted:    grammar/verbs/leloipe.yaml modified:   grammar/verbs/linepti.yaml new file:   grammar/verbs/lufjeti.yaml new file:   grammar/verbs/sontieti.yaml new file:   grammar/verbs/stati.yaml deleted:    grammar/verbs/voide.yaml

--- a/grammar/template.latex.liquid
+++ b/grammar/template.latex.liquid
@@ -29,6 +29,16 @@
 	{%- for item in word.active.indicative.perfect -%}
 		& \mlan{ {{ item }} }
 	{%- endfor -%} \\\\
+	\Plup
+	& \multicolumn{6}{c}{
+	(active indicative perfect of \mlan{esti})
+	+ \mlan{ {{word.active.participle.perfect}} }
+	} \\\\
+	\Fut
+	& \multicolumn{6}{c}{
+	(active indicative present of \mlan{iti})
+	+ \mlan{ {{word.active.participle.present}} }
+	} \\\\
 	\midrule
 	\Prs
 	{%- for item in word.active.subjunctive.present -%}
